kubernetes/base/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  namespace: url-shortener
spec:
  replicas: 3
  revisionHistoryLimit: 5
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
      
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: url-shortener
          image: 381491944316.dkr.ecr.us-east-1.amazonaws.com/url-shortener:v4 
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8080

            failureThreshold: 30
            periodSeconds: 10
    

---

apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
