kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  namespace: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
